derniere version du code avant présentation

--- a/front/src/Componenents/Header/Header.css
+++ b/front/src/Componenents/Header/Header.css
@@ -29,7 +29,7 @@
 }
 
 .h-menu a {
-    color: #60A5FA;
+    color: #3372e3    ;
     font-weight: 600;
     text-decoration: none;
     transition: all 0.2s ease;
