--- a/front/src/Componenents/Commencer/Commencer.css
+++ b/front/src/Componenents/Commencer/Commencer.css
@@ -7,7 +7,7 @@
     border-radius: 12px;
     text-align: center;
     margin: 3rem auto;
-    background: gray   ;
+    background: rgb(183, 181, 181)  ;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
 }
