--- a/front/src/Componenents/Filter/Filter.css
+++ b/front/src/Componenents/Filter/Filter.css
@@ -1,17 +1,17 @@
 /* Conteneur principal du filtre */
 .lft-filter-container {
     position: sticky;
-    top: 0;
-    background:  #0BABD1;    padding: 20px 40px;
+    background:  #3372e3;    padding: 20px 40px;
     border-bottom: 1px solid #ddd;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 1000px;
     margin: 0 auto 20px;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
-    height: 300px;
-    z-index: 10;
+    height: 200px;
+    z-index: 1;
+    width: 100%;
+
 }
 
 /* Titre du filtre */
