--- a/front/src/Pages/Login/Login.css
+++ b/front/src/Pages/Login/Login.css
@@ -37,7 +37,7 @@
 
 .loginFormTitle {
     font-size: 2rem;
-    color: #6EE7B7;
+    color: #3372e3;
     animation:alternate;
     text-align: center;
     font-weight: 600;
