--- a/front/src/Pages/Nvlannonce/Nvlannonce.css
+++ b/front/src/Pages/Nvlannonce/Nvlannonce.css
@@ -1,7 +1,7 @@
 .driver-hero {
     position: relative;
     height: 100vh;
-    background-image: url('/src/assets/home3.jpg');
+    background-image: url('/src/assets/nvl.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -27,20 +27,24 @@
 .contenDRIVER {
     position: relative;
     text-align: center;
-    color: #fff;
-    font-weight: boldER;
+    color: #ffffff;
+    font-weight: 700;
     max-width: 700px;
     padding: 2rem;
     animation: fadeIn 1s ease forwards;
     opacity: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Fond noir transparent */
+    border-radius: 12px;
+    backdrop-filter: blur(4px);
+    /* Effet flou moderne */
 }
-
 .contenDRIVER h2 {
     font-size: 3.2rem;
     font-weight: 700;
     margin-bottom: 1rem;
     line-height: 1.2;
-    color: aliceblue;
+    color: white;
 }
 
 .contenDRIVER p {
